<resources>
    <string name="app_name">MedAssistPro</string>

    <!-- Register Activity -->
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="insurance_information">Insurance Information</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="patient_registration_main">Patient Registration</string>

    <!-- Appointment Activity -->
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="time_format">%1$d:%2$02d %3$s</string>
    <string name="save">Save</string>

    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_patient">Register as Patient</string>
    <string name="logout">logout</string>

    <!--- Appointment Activity -->
    <string name="booking_patient_name">Booking Appointment for %1$s</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="patient_name">Patient Name</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="book_appointment_btn">Book Appointment</string>
    <string name="appointment_scheduling_main">Book Appointment</string>

    <!-- Dashboard Activity -->
    <string name="dashboard">Dashboard</string>
    <string name="welcome_text">Welcome, %1$s</string>
    <string name="dash_profile_btn">Profile</string>
    <string name="view_all_appointments_btn">View All Appointments</string>

    <!-- View All Appointments Activity -->
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="completed_appointments">Completed Appointments</string>
    <string name="delete_appointment">Delete Appointment</string>

    <!-- Electronic Health Records Activity -->
    <string name="ehr">Electronic Health Records (EHR)</string>
    <string name="electronic_health_records">Electronic Health Records</string>
    <string name="medical_history">Medical History</string>
    <string name="diagnoses">Diagnoses</string>
    <string name="medications">Medications</string>
    <string name="lab_results">Lab Results</string>
    <string name="treatment_plans">Treatment Plans</string>

    <!-- Profile Activity -->
    <string name="profile">Profile</string>

    <!-- Billing Activity -->
    <string name="billing">Billing</string>
    <string name="logo">Logo</string>
</resources>
