<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patient_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegistrationActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title TextView -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_registration"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginVertical="16dp" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/age"
        android:inputType="number"
        android:autofillHints="age"/>

    <EditText
        android:id="@+id/etMedicalHistory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/medical_history"
        android:inputType="textMultiLine"
        android:autofillHints="text" />

    <EditText
        android:id="@+id/etInsuranceInfo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/insurance_information"
        android:inputType="textMultiLine"
        android:autofillHints="text" />

    <EditText
        android:id="@+id/etEmergencyContact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/emergency_contact"
        android:inputType="phone"
        android:autofillHints="phone" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/register"
        app:cornerRadius="4dp" />

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
